pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  containers:
    - name: flask-app
      image: tomrajput/flask-app:0.1.0
      imagePullPolicy: Always
      ports:
        - name: http
          containerPort: 5000
          protocol: TCP
