service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: flask-svc 
spec: 
  selector: 
    app: flask-app 
  ports: 
    - protocol: TCP 
      port: 5000 
      targetPort: 5000
