ingress-host.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: flask-app 
  annotations: 
    ingress.kubernetes.io/rewrite-target: / 
    kubernetes.io/ingress.class: traefik 
spec: 
  rules: 
  - host: "flask-app.example.com" 
    http: 
      paths: 
      - path: / 
        pathType: Prefix 
        backend: 
          service: 
            name: flask-svc
            port: 
              number: 5000
